// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notifications /> should render correctly - index 1`] = `
<div>
  <div />
</div>
`;

exports[`<Notifications /> should render correctly with initial state 1`] = `
<div>
  <div />
</div>
`;

exports[`<Notifications /> should render correctly with loadError 1`] = `
<div>
  <div />
</div>
`;

exports[`<Notifications /> should render correctly with loading=true 1`] = `
<div>
  <div />
</div>
`;

exports[`<Notifications /> should render correctly with notifications 1`] = `
<div>
  <div
    class="notification-comp__notification notification-comp__notification--success notificationsstyles__StyledNotification-sc-1lybnks-0 fOYZIT"
  >
    message1
  </div>
  <div
    class="notification-comp__notification notification-comp__notification--warn notificationsstyles__StyledNotification-sc-1lybnks-0 fOYZIT"
  >
    message2
  </div>
  <div
    class="notification-comp__notification notification-comp__notification--error notificationsstyles__StyledNotification-sc-1lybnks-0 fOYZIT"
  >
    message3
  </div>
  <div />
</div>
`;

exports[`<Notifications /> should render correctly with user 1`] = `
<div>
  <div />
</div>
`;
